@@ -11,12 +11,16 @@ import it.polimi.ingsw.gc31.client_server.interfaces.VirtualClient;
 import it.polimi.ingsw.gc31.exceptions.NoGamesException;
 import it.polimi.ingsw.gc31.exceptions.PlayerNicknameAlreadyExistsException;
 
-//NOTE creazione GameController x la creazione del match
-//il GameController relativo al primo match viene creato subito dopo che il primo player si è loggato? 
-//Mi sembra più semplice fare così che gestire le attese per la creazione dei GameController nel Controller
+//NOTE creation of GameController for match creation
+// Does the GameController related to the first match get created immediately after the first player has logged in?
+// It seems easier to do it this way than to manage waits for the creation of GameControllers in the Controller
+// Manages interaction with clients
 
-// gestisce l'interazione con i client
-
+/**
+ * This class represents the main controller of all the games that ar currently running.
+ * It manages the interaction with the clients and the creation of game controllers for each match.
+ * It implements the IController interface and extends the UnicastRemoteObject to allow remote method invocation.
+ */
 public class Controller extends UnicastRemoteObject implements IController {
     private static final Controller singleton;
 
@@ -30,25 +34,39 @@ public class Controller extends UnicastRemoteObject implements IController {
         }
     }
 
-    private final List<GameController> mgcList;
+    private final List<GameController> gameControlList;
     private Map<String, VirtualClient> tempClients;
-    private Set<String> nicknames;
+    private final Set<String> nicknames;
 
+    /**
+     * Private constructor for the Controller class.
+     * It initializes the tempClients map and the nickname's set.
+     *
+     * @throws RemoteException if an RMI error occurs.
+     */
     private Controller() throws RemoteException {
         tempClients = new HashMap<>();
         nicknames = new HashSet<>();
-        mgcList = new ArrayList<>();
+        gameControlList = new ArrayList<>();
     }
 
-    public static synchronized Controller getController() {
-        return singleton;
-    }
-
+    /**
+     * Prints a message to the console with a specific format.
+     *
+     * @param text the message to print.
+     */
     private void controllerWrite(String text) {
-        System.out.println(DefaultValues.ANSI_BLUE
+        System.out.println(DefaultValues.ANSI_GREEN + DefaultValues.RMI_SERVER_TAG + DefaultValues.ANSI_BLUE
                 + DefaultValues.CONTROLLER_TAG + DefaultValues.ANSI_RESET + text);
     }
 
+    /**
+     * Connects a client to the server.
+     *
+     * @param client   the client to connect.
+     * @param username the username of the client.
+     * @throws PlayerNicknameAlreadyExistsException if the username is already in use.
+     */
     @Override
     public void connect(VirtualClient client, String username) throws PlayerNicknameAlreadyExistsException {
         if (!nicknames.add(username)) {
@@ -59,38 +77,69 @@ public class Controller extends UnicastRemoteObject implements IController {
         // TODO mandare un messaggio di conferma al client
     }
 
+    /**
+     * Creates a new game and adds it to the game control list.
+     *
+     * @param username the username of the client creating the game.
+     * @param maxNumberPlayers the maximum number of players for the game.
+     * @return the game controller for the newly created game.
+     * @throws RemoteException if an RMI error occurs.
+     */
     @Override
     public IGameController createGame(String username, int maxNumberPlayers) throws RemoteException {
         VirtualClient client = tempClients.get(username);
-        mgcList.add(new GameController(username, client, maxNumberPlayers, mgcList.size()));
-        client.setGameID(mgcList.size() - 1);
+        gameControlList.add(new GameController(username, client, maxNumberPlayers, gameControlList.size() - 1));
+        client.setGameID(gameControlList.size() - 1);
         tempClients.remove(username);
-        controllerWrite("New Game Created with ID: " + (mgcList.size()));
-        return mgcList.get(mgcList.size() - 1);
+        controllerWrite("New Game Created with ID: " + (gameControlList.size()-1));
+        return gameControlList.getLast();
     }
 
+    /**
+     * Allows a client to join an existing game.
+     *
+     * @param username the username of the client joining the game.
+     * @param idGame the ID of the game to join.
+     * @return the game controller for the joined game.
+     * @throws RemoteException if an RMI error occurs.
+     */
+    @Override
+    public IGameController joinGame(String username, int idGame) throws RemoteException {
+        gameControlList.get(idGame).joinGame(username, tempClients.get(username));
+        tempClients.remove(username);
+
+        return gameControlList.get(idGame);
+    }
+
+    //GETTERS
+
+    /**
+     * @return the singleton instance.
+     */
+    public static synchronized Controller getController() {
+        return singleton;
+    }
+
+    /**
+     * Returns a list of the current games.
+     *
+     * @throws RemoteException  if an RMI error occurs.
+     * @throws NoGamesException if there are no current games.
+     */
     @Override
     public void getGameList(String username) throws RemoteException, NoGamesException {
-        if (mgcList.isEmpty()) {
+        if (gameControlList.isEmpty()) {
             throw new NoGamesException();
         } else {
             List<String> res = new ArrayList<>();
-            for (int i = 0; i < mgcList.size(); i++) {
+            for (int i = 0; i < gameControlList.size(); i++) {
                 res.add(
                         i + " "
-                                + mgcList.get(i).getMaxNumberPlayers() + " / "
-                                + mgcList.get(i).getCurrentNumberPlayers());
+                                + gameControlList.get(i).getMaxNumberPlayers() + " / "
+                                + gameControlList.get(i).getCurrentNumberPlayers());
             }
             // TODO gestire qua l'eccezione?
             tempClients.get(username).showListGame(res);
         }
-    }
-
-    @Override
-    public IGameController joinGame(String username, int idGame) throws RemoteException {
-        mgcList.get(idGame).joinGame(username, tempClients.get(username));
-        tempClients.remove(username);
-
-        return mgcList.get(idGame);
     }
 }
